# guile-dbd-odbc

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  guile-dbd-odbc.c
test/: README.TXT  odbc.ini  test.out.expected  test.scm  test.sh
